# navmesh-lib

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  README.md  build-ios.sh  build-linux.sh
example/: CMakeLists.txt  DLLTest.cpp  DLLTest.cs
src/: Circle.cpp  Circle.h  Edge.cpp  Edge.h  Makefile  Math.cpp  Math.h  NavPath.cpp  Path.cpp  Path.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Triangle.cpp  Triangle.h  log.h
